# ShufflePaper

./: .gitignore  README.md  index.html  initproposal.md  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  scanner.rs  scheduler.rs  settings.rs  state.rs  tray.rs  wallpaper.rs
